--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -212,7 +212,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Estas segur que vols continuar amb l’eliminació?</string>
     <string name="deletion_confirmation">Esteu segur que voleu suprimir %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Estàs segur que vols moure %s a la paperera?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Estàs segur que vols moure %s a la paperera?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">No tornar a preguntar en aquesta sessió</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
@@ -368,7 +370,7 @@
     <string name="use_same_snooze">Utilitzeu sempre el mateix temps de posposat</string>
     <string name="snooze_time">Temps de posposat</string>
     <string name="vibrate_on_button_press">Vibrar al prŕmer un botó</string>
-    <string name="move_items_to_recycle_bin">Mou elements a la paperera de reciclatge en lloc de suprimir-los</string>
+    <string name="move_items_into_recycle_bin">Mou elements a la paperera de reciclatge en lloc de suprimir-los</string>
     <string name="recycle_bin_cleaning_interval">Interval de neteja de paperera de reciclatge</string>
     <string name="empty_recycle_bin">Buida la paperera de reciclatge</string>
     <string name="force_portrait_mode">Força el mode de retrat</string>
