--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Êtes-vous sûr•e de vouloir effectuer la suppression ?</string>
     <string name="deletion_confirmation">Êtes-vous sûr•e de vouloir supprimer %s ?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Êtes-vous sûr•e de vouloir déplacer %s vers la corbeille ?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Êtes-vous sûr•e de vouloir déplacer %s vers la corbeille ?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Ne pas redemander pour cette session</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
@@ -366,7 +368,7 @@
     <string name="use_same_snooze">Toujours utiliser le même intervalle de répétition</string>
     <string name="snooze_time">Temps de répétition</string>
     <string name="vibrate_on_button_press">Vibrer lors de l\'appui sur un bouton</string>
-    <string name="move_items_to_recycle_bin">Déplacer les éléments vers la corbeille au lieu de les supprimer</string>
+    <string name="move_items_into_recycle_bin">Déplacer les éléments vers la corbeille au lieu de les supprimer</string>
     <string name="recycle_bin_cleaning_interval">Interval de vidage de la corbeille</string>
     <string name="empty_recycle_bin">Vider la corbeille</string>
     <string name="force_portrait_mode">Forcer le mode portrait</string>
