--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Sei sicuro di procedere con l\'eliminazione?</string>
     <string name="deletion_confirmation">Sei sicuro di volere eliminare %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Sei sicuro di volere spostare nel cestino %s?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Sei sicuro di volere spostare nel cestino %s?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Non chiedere nuovamente in questa sessione</string>
     <string name="yes">Sì</string>
     <string name="no">No</string>
@@ -366,7 +368,7 @@
     <string name="use_same_snooze">Usa sempre lo stesso tempo di ripetizione</string>
     <string name="snooze_time">Tempo di ripetizione</string>
     <string name="vibrate_on_button_press">Vibra alla pressione dei tasti</string>
-    <string name="move_items_to_recycle_bin">Sposta gli elementi nel cestino invece di eliminarli</string>
+    <string name="move_items_into_recycle_bin">Sposta gli elementi nel cestino invece di eliminarli</string>
     <string name="recycle_bin_cleaning_interval">Intervallo svuotamento cestino</string>
     <string name="empty_recycle_bin">Svuota il cestino</string>
     <string name="force_portrait_mode">Forza la modalità ritratto</string>
