--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ar tikrai norite ištrinti?</string>
     <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s into the Recycle Bin?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Do not ask again in this session</string>
     <string name="yes">Taip</string>
     <string name="no">Ne</string>
@@ -383,7 +385,7 @@
     <string name="use_same_snooze">Visada naudoti tą patį snaudimo laiką</string>
     <string name="snooze_time">Snaudimo laikas</string>
     <string name="vibrate_on_button_press">Vibruoti kai spaudžiami mygtukai</string>
-    <string name="move_items_to_recycle_bin">Perkelti elementus į šiukšlinę vietoj ištrynimo</string>
+    <string name="move_items_into_recycle_bin">Perkelti elementus į šiukšlinę vietoj ištrynimo</string>
     <string name="recycle_bin_cleaning_interval">Šiukšlinės išvalymo intervalas</string>
     <string name="empty_recycle_bin">Ištuštinti šiukšlinę</string>
     <string name="force_portrait_mode">Priversti rodyti portreto rėžimu</string>
