--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Er du sikker på at du vil fortsette med slettingen?</string>
     <string name="deletion_confirmation">Er du sikker på at du vil slette %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Er du sikker på at du vil flytte %s til papirkurven?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Er du sikker på at du vil flytte %s til papirkurven?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Ikke spør igjen i denne økten</string>
     <string name="yes">Ja</string>
     <string name="no">Nei</string>
@@ -366,7 +368,7 @@
     <string name="use_same_snooze">Bruk alltid samme intervall for Snooze</string>
     <string name="snooze_time">Intervall for Snooze</string>
     <string name="vibrate_on_button_press">Vibrer ved trykk på knapper</string>
-    <string name="move_items_to_recycle_bin">Flytt elementer til papirkurven istedenfor å slette dem</string>
+    <string name="move_items_into_recycle_bin">Flytt elementer til papirkurven istedenfor å slette dem</string>
     <string name="recycle_bin_cleaning_interval">Tømmeintervall for papirkurven</string>
     <string name="empty_recycle_bin">Tøm papirkurven</string>
     <string name="force_portrait_mode">Påtving portrettmodus</string>
