--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Deze items verwijderen?</string>
     <string name="deletion_confirmation">%s echt verwijderen?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">%s echt verplaatsen naar de prullenbak?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">%s echt verplaatsen naar de prullenbak?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Onthouden voor deze sessie</string>
     <string name="yes">Ja</string>
     <string name="no">Nee</string>
@@ -366,7 +368,7 @@
     <string name="use_same_snooze">Altijd dezelfde interval voor uitstellen gebruiken</string>
     <string name="snooze_time">Interval bij uitstellen</string>
     <string name="vibrate_on_button_press">Trillen bij het indrukken van knoppen</string>
-    <string name="move_items_to_recycle_bin">Items niet verwijderen, maar verplaatsen naar prullenbak</string>
+    <string name="move_items_into_recycle_bin">Items niet verwijderen, maar verplaatsen naar prullenbak</string>
     <string name="recycle_bin_cleaning_interval">Interval prullenbak leegmaken</string>
     <string name="empty_recycle_bin">Prullenbak leegmaken</string>
     <string name="force_portrait_mode">Portretmodus forceren</string>
