--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -213,7 +213,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
     <string name="deletion_confirmation">Tem a certeza de que deseja apagar %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Tem a certeza de que deseja mover %s para a reciclagem?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Tem a certeza de que deseja mover %s para a reciclagem?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Não perguntar mais para esta sessão</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
@@ -366,7 +368,7 @@
     <string name="use_same_snooze">Usar sempre o mesmo intervalo para snooze</string>
     <string name="snooze_time">Intervalo para snooze</string>
     <string name="vibrate_on_button_press">Vibrar ao tocar nos botões</string>
-    <string name="move_items_to_recycle_bin">Mover itens para a reciclagem em vez de os apagar</string>
+    <string name="move_items_into_recycle_bin">Mover itens para a reciclagem em vez de os apagar</string>
     <string name="recycle_bin_cleaning_interval">Intervalo de tempo para limpar a reciclagem</string>
     <string name="empty_recycle_bin">Limpar reciclagem</string>
     <string name="force_portrait_mode">Impor modo verticar</string>
