--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -215,7 +215,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Подтверждение удаления</string>
     <string name="deletion_confirmation">Вы действительно хотите удалить %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Вы действительно хотите переместить %s в корзину?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Вы действительно хотите переместить %s в корзину?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">Не спрашивать снова (до следующего запуска)</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
@@ -395,7 +397,7 @@
     <string name="use_same_snooze">Всегда использовать один и тот же интервал повтора</string>
     <string name="snooze_time">Интервал повтора</string>
     <string name="vibrate_on_button_press">Вибрация при нажатии кнопок</string>
-    <string name="move_items_to_recycle_bin">Перемещать объекты в корзину вместо удаления</string>
+    <string name="move_items_into_recycle_bin">Перемещать объекты в корзину вместо удаления</string>
     <string name="recycle_bin_cleaning_interval">Интервал очистки корзины</string>
     <string name="empty_recycle_bin">Очистить корзину</string>
     <string name="force_portrait_mode">Принудительный портретный режим</string>
