--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -215,7 +215,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
     <string name="deletion_confirmation">Ste si istý, že chcete vymazať %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Ste si istý, že chcete vyhodiť %s do koša?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">Ste si istý, že chcete vyhodiť %s do koša?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Ste si istý, že chcete vymazať túto položku?</string>
+    <string name="are_you_sure_recycle_bin">Ste si istý, že chcete vyhodiť túto položku do odpadkového koša?</string>
     <string name="do_not_ask_again">Nepýtať sa už v tomto spustení</string>
     <string name="yes">Áno</string>
     <string name="no">Nie</string>
@@ -386,7 +388,7 @@
     <string name="use_same_snooze">Použiť stále rovnaký čas s Odložiť</string>
     <string name="snooze_time">Čas odloženia</string>
     <string name="vibrate_on_button_press">Vibrovať pri stlačení tlačidiel</string>
-    <string name="move_items_to_recycle_bin">Presunúť položky miesto vymazania do odpadkového koša</string>
+    <string name="move_items_into_recycle_bin">Presunúť položky miesto vymazania do odpadkového koša</string>
     <string name="recycle_bin_cleaning_interval">Interval vysypávania koša</string>
     <string name="empty_recycle_bin">Vysypať odpadkový kôš</string>
     <string name="force_portrait_mode">Stále použiť režim na výšku</string>
