--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -212,7 +212,9 @@
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">確定要進行刪除嗎?</string>
     <string name="deletion_confirmation">你確定要刪除%s嗎?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">你確定要把%s移到回收桶嗎?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="move_to_recycle_bin_confirmation">你確定要把%s移到回收桶嗎?</string>    <!-- Are you sure you want to move 3 items into Recycle Bin? -->
+    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
+    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
     <string name="do_not_ask_again">這情況不再詢問</string>
     <string name="yes">是</string>
     <string name="no">否</string>
@@ -365,7 +367,7 @@
     <string name="use_same_snooze">總是使用相同延遲間隔</string>
     <string name="snooze_time">延遲時間</string>
     <string name="vibrate_on_button_press">按下按鈕時震動</string>
-    <string name="move_items_to_recycle_bin">將項目移入回收桶取代刪除</string>
+    <string name="move_items_into_recycle_bin">將項目移入回收桶取代刪除</string>
     <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
     <string name="empty_recycle_bin">空白回收桶</string>
     <string name="force_portrait_mode">強制直向模式</string>
