--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -249,6 +249,8 @@
     <string name="fingerprint_setup_successfully">Ochrana bola úspešne nastavená. Prosím preinštalujte aplikáciu v prípade problémov s jej zmenou.</string>
 
     <!-- Times -->
+    <string name="yesterday">Včera</string>
+    <string name="today">Dnes</string>
     <string name="tomorrow">Zajtra</string>
     <string name="seconds_raw">sekundy</string>
     <string name="minutes_raw">minúty</string>
