--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -544,7 +544,7 @@
     <string name="faq_4_title_commons">Мне не нравятся цвета виджета, я могу их изменить?</string>
     <string name="faq_4_text_commons">Да, при перетаскивании виджета на главный экран появляется панель его настройки. На ней вы увидите цветные квадраты в левом нижнем углу, просто нажмите их, чтобы выбрать новый цвет. Также можно использовать ползунок для настройки прозрачности.</string>
     <string name="faq_5_title_commons">Могу я как-то восстановить удалённые файлы?</string>
-    <string name="faq_5_text_commons">Если они были действительно удалены, то не можете. Однако можно включить использование корзины вместо удаления в настройках приложения. Тогда файлы будут просто перемещаться в неё, а не удаляться. Можно настроить расположение корзины и интервал автоматической очистки, а также очистить корзину вручную.</string>
+    <string name="faq_5_text_commons">Если они были действительно удалены, то не можете. Однако можно включить использование корзины вместо удаления в настройках приложения. Тогда файлы будут просто перемещаться в неё, а не удаляться.</string>
 
     <!-- License -->
     <string name="notice">Это приложение использует следующие библиотеки сторонних разработчиков, чтобы облегчить мой труд. Спасибо.</string>
